@@ -62,6 +62,7 @@ alias @fpo      @fpose
 alias @fpos     @fpose
 alias @ha       @halt
 alias @hal      @halt
+alias @haven    @reject
 alias @ifelse   @if
 alias @li       @link
 alias @lin      @link
